update table example #2
added styles and centered table

--- a/table-2.html
+++ b/table-2.html
@@ -8,101 +8,98 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="table-2.css">
+    <link rel="stylesheet" href="table-2.css" />
     <title>Document</title>
   </head>
   <body>
     <span>FIXED TABLE HEADER</span>
-    <div>
-
-    
-    <table>
-      <thead>
-        <th>CODE</th>
-        <th>COMPANY</th>
-        <th>PRICE</th>
-        <th>CHANCE</th>
-        <th>CHANGE %</th>
-      </thead>
-      <tr>
-        <td>AAC</td>
-        <td>UASTRALIAN COMPANY</td>
-        <td>$1.38</td>
-        <td>+2.01</td>
-        <td>-0.36%</td>
-      </tr>
-      <tr>
-        <td>AAD</td>
-        <td>AUSENCO</td>
-        <td>$2.38</td>
-        <td>-0.01</td>
-        <td>-1.36%</td>
-      </tr>
-      <tr>
-        <td>AAD</td>
-        <td>AUSENCO</td>
-        <td>$2.38</td>
-        <td>-0.01</td>
-        <td>-1.36%</td>
-      </tr>
-      <tr>
-        <td>AAD</td>
-        <td>AUSENCO</td>
-        <td>$2.38</td>
-        <td>-0.01</td>
-        <td>-1.36%</td>
-      </tr>
-      <tr>
-        <td>AAD</td>
-        <td>AUSENCO</td>
-        <td>$2.38</td>
-        <td>-0.01</td>
-        <td>-1.36%</td>
-      </tr>
-      <tr>
-        <td>AAD</td>
-        <td>AUSENCO</td>
-        <td>$2.38</td>
-        <td>-0.01</td>
-        <td>-1.36%</td>
-      </tr>
-      <tr>
-        <td>AAD</td>
-        <td>AUSENCO</td>
-        <td>$2.38</td>
-        <td>-0.01</td>
-        <td>-1.36%</td>
-      </tr>
-      <tr>
-        <td>AAC</td>
-        <td>UASTRALIAN COMPANY</td>
-        <td>$1.38</td>
-        <td>+2.01</td>
-        <td>-0.36%</td>
-      </tr>
-      <tr>
-        <td>AAC</td>
-        <td>UASTRALIAN COMPANY</td>
-        <td>$1.38</td>
-        <td>+2.01</td>
-        <td>-0.36%</td>
-      </tr>
-      <tr>
-        <td>AAC</td>
-        <td>UASTRALIAN COMPANY</td>
-        <td>$1.38</td>
-        <td>+2.01</td>
-        <td>-0.36%</td>
-      </tr>
-      <tr>
-        <td>AAC</td>
-        <td>UASTRALIAN COMPANY</td>
-        <td>$1.38</td>
-        <td>+2.01</td>
-        <td>-0.36%</td>
-      </tr>
-      
-    </table>
+    <div class="table-class">
+      <table>
+        <thead>
+          <th>CODE</th>
+          <th>COMPANY</th>
+          <th>PRICE</th>
+          <th>CHANCE</th>
+          <th>CHANGE %</th>
+        </thead>
+        <tr>
+          <td>AAC</td>
+          <td>UASTRALIAN COMPANY</td>
+          <td>$1.38</td>
+          <td>+2.01</td>
+          <td>-0.36%</td>
+        </tr>
+        <tr>
+          <td>AAD</td>
+          <td>AUSENCO</td>
+          <td>$2.38</td>
+          <td>-0.01</td>
+          <td>-1.36%</td>
+        </tr>
+        <tr>
+          <td>AAD</td>
+          <td>AUSENCO</td>
+          <td>$2.38</td>
+          <td>-0.01</td>
+          <td>-1.36%</td>
+        </tr>
+        <tr>
+          <td>AAD</td>
+          <td>AUSENCO</td>
+          <td>$2.38</td>
+          <td>-0.01</td>
+          <td>-1.36%</td>
+        </tr>
+        <tr>
+          <td>AAD</td>
+          <td>AUSENCO</td>
+          <td>$2.38</td>
+          <td>-0.01</td>
+          <td>-1.36%</td>
+        </tr>
+        <tr>
+          <td>AAD</td>
+          <td>AUSENCO</td>
+          <td>$2.38</td>
+          <td>-0.01</td>
+          <td>-1.36%</td>
+        </tr>
+        <tr>
+          <td>AAD</td>
+          <td>AUSENCO</td>
+          <td>$2.38</td>
+          <td>-0.01</td>
+          <td>-1.36%</td>
+        </tr>
+        <tr>
+          <td>AAC</td>
+          <td>UASTRALIAN COMPANY</td>
+          <td>$1.38</td>
+          <td>+2.01</td>
+          <td>-0.36%</td>
+        </tr>
+        <tr>
+          <td>AAC</td>
+          <td>UASTRALIAN COMPANY</td>
+          <td>$1.38</td>
+          <td>+2.01</td>
+          <td>-0.36%</td>
+        </tr>
+        <tr>
+          <td>AAC</td>
+          <td>UASTRALIAN COMPANY</td>
+          <td>$1.38</td>
+          <td>+2.01</td>
+          <td>-0.36%</td>
+        </tr>
+        <tr>
+          <td>AAC</td>
+          <td>UASTRALIAN COMPANY</td>
+          <td>$1.38</td>
+          <td>+2.01</td>
+          <td>-0.36%</td>
+        </tr>
+      </table>
     </div>
   </body>
 </html>
